--- a/StoreHive.API/appsettings.json
+++ b/StoreHive.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings":{
+    "Default":"Data Source = StoreDb.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
